fix: dark mode text

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:is(.dark *));
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
 	--background: oklch(0.9779 0.0042 56.3756);
@@ -69,7 +69,7 @@
 }
 
 .dark {
-	--background: oklch(0.2161 0.0061 56.0434);
+	--background: oklch(0.11 0.004 56);
 	--foreground: oklch(0.9699 0.0013 106.4238);
 	--card: oklch(0.2685 0.0063 34.2976);
 	--card-foreground: oklch(0.9699 0.0013 106.4238);
@@ -191,6 +191,7 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+		min-height: 100svh;
 	}
 
 	/* EPUB.js iframe styling */
